# ongeeki-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: PN532.cpp.9C5E3D6F4765E34A.idx  PN532.h.39ABB7CC731B3A31.idx  PN532Interface.h.C32C36FEC471CF14.idx  PN532_I2C.cpp.E7133132E3791CED.idx  PN532_I2C.h.C8FD42822137D84C.idx  PN532_debug.h.7B1553C82BDA3579.idx  aime_cmd.hpp.C3AAACE824920941.idx  aime_reader.cpp.8001D49A435AF1FD.idx  aime_reader.hpp.20EF21C4EE54AEB3.idx  cdc.h.49F9C156F3371127.idx  cdc_device.c.45709F00080CA2D8.idx  cdc_device.h.3CB71BF26278A56A.idx  comio.hpp.5CBC9E4CE0EFBA72.idx  dcd.h.C0F7E2D65E74B647.idx  dcd_esp32sx.c.78B8EDC87944E8CC.idx  desc.hpp.6641FF4CD381C36F.idx  disk_img.h.C711829A7E20899F.idx  emulatetag.cpp.DB645D69A271BA4C.idx  emulatetag.h.5B24274998466C3F.idx  fat.c.097F146AEC97A39C.idx  fat.h.CDBDF3D3F5FA2C8D.idx  fs.c.429B18B89A948A1E.idx  hid.cpp.88AF6CE3AD4984E4.idx  hid.h.3C0B7C3A5D0DC962.idx  hid.hpp.EB48DB3DD7301AD1.idx  hid_device.c.A247776F0D08C3FA.idx  hid_device.h.EEB18EC1CC5A0129.idx  led_board.cpp.4F245AC0805CC839.idx  led_board.hpp.2134D8A70FBE8D80.idx  llcp.cpp.C6976BF255882319.idx  llcp.h.3FB1C3DC185BC8BD.idx  mac_link.cpp.A85C42E436896950.idx  mac_link.h.68735AAAF962EADA.idx  main.cpp.0CF34BE7BD86085A.idx  midi_device.c.A8C4045B8E81E81C.idx  msc.h.5FA999BB637B7C5A.idx  msc_device.c.8DEC159D50325EC0.idx  msc_device.h.A79FD75BE8FAF2B9.idx  osal.h.3DEC3015144E1CF6.idx  osal_freertos.h.ACDD5F4E50289D7B.idx  (+26 more)
components/pn532/: CMakeLists.txt
components/pn532/PN532/: PN532.cpp  PN532_debug.h  emulatetag.cpp  snep.cpp
components/pn532/PN532_HSU/: PN532_HSU.cpp  PN532_HSU.h
components/pn532/PN532_I2C/: PN532_I2C.cpp  PN532_I2C.h
components/tusb/: CMakeLists.txt
components/tusb/include/: tusb_config.h
main/: CMakeLists.txt
main/src/: hardware.cpp  hardware.hpp  main.cpp  stdinclude.hpp
(+15 files in other folders)
